[project]
name = "improvado"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.91.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
]

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
